# local-embed

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/rag/: SKILL.md
examples/local-test/: README.md  run.py  sample.txt
examples/rag/: README.md  rag.py
examples/test-data/: ancient-rome.txt  artificial-intelligence.txt  beekeeping.txt  climate-change.txt  cryptography.txt  human-nutrition.txt  impressionist-painting.txt  jazz-music.txt  medieval-architecture.txt  ocean-ecosystems.txt  person-aristotle.txt  person-beethoven.txt  person-curie.txt  person-da-vinci.txt  person-darwin.txt  person-einstein.txt  person-gutenberg.txt  person-king.txt  person-mandela.txt  person-turing.txt  photography-basics.txt  quantum-physics.txt  renewable-energy.txt  volcanic-geology.txt
src/embed_provider/: __init__.py  api.py  config.py  device.py  model.py  schemas.py
tests/: test_embeddings.py
