[project]
name = "embedding-service"
version = "0.1.0"
description = "Multilingual embedding service powered by sentence-transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers",
    "torch",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embed_provider"]
